--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blog post </h1>
-    <p>y este es el parrafo de inicio </p>
+    <div id="container">
+        <h1> este es el titulo atractivo 
+            e interesante del post  </h1>
+        <p>y este es el parrafo de inicio donde vamos
+            a esplicar todo sobro todo </p>
+    </div>
+   
 </body>
 </html>
