--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <h1> este es el titulo atractivo 
             e interesante del post  </h1>
         <p>y este es el parrafo de inicio donde vamos
