finalizada la cabecera con diseño azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,12 +10,16 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            HYperblog
+            <span id="tagline">Tu Blog</span>
         </div>
-        <h1> este es el titulo atractivo 
-            e interesante del post  </h1>
-        <p>y este es el parrafo de inicio donde vamos
-            a esplicar todo sobro todo </p>
+        <div id="post">
+            <h1> este es el titulo atractivo 
+                e interesante del post  </h1>
+            <p>y este es el parrafo de inicio donde vamos
+                a esplicar todo sobro todo </p>
+        </div>
+       
     </div>
    
 </body>
