--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,9 @@
             e interesante del post  </h1>
         <p>y este es el parrafo de inicio donde vamos
             a esplicar todo sobro todo </p>
+
+        <p>Los blogs son la mejor forma de comparti 
+            informacion</p>
     </div>
    
 </body>
