camie cabecera mestra, agregue parrafo, y cambie color

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,13 +11,15 @@
     <div id="container">
         <div id="cabecera">
             HYperblog
-            <span id="tagline">Tu Blog</span>
+            <span id="tagline">Tu Blog maestro</span>
         </div>
         <div id="post">
             <h1> este es el titulo atractivo 
                 e interesante del post  </h1>
             <p>y este es el parrafo de inicio donde vamos
                 a esplicar todo sobro todo </p>
+            
+            <p>Este es un parrfo mas agregado en la rama master</p>
         </div>
        
     </div>
