Una version de el Hyperblog

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titulo de Post</title>
+    <title>Bienvenidos a HYperblog 2.0</title>
     <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
     <div id="container">
         <div id="cabecera">
-            HYperblog
+            HYperblog 
             <span id="tagline">Bienvenidos</span>
         </div>
         <div id="post">
