color de fondo, logo nuevo y mejor color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="imagenes/spacex.jpg" alt="">
             HYperblog 
             <span id="tagline">Bienvenidos</span>
         </div>
