arreglando la palabra parrafo

--- a/blogpost.html
+++ b/blogpost.html
@@ -20,7 +20,7 @@
             <p>y este es el parrafo de inicio donde vamos
                 a explicar todo sobro todo </p>
             
-            <p>Este es un parrfo mas agregado en la rama master</p>
+            <p>Este es un parrafo mas agregado en la rama master</p>
         </div>
        
     </div>
