--- a/blogpost.html
+++ b/blogpost.html
@@ -18,7 +18,7 @@
             <h1> este es el título atractivo 
                 e interesante del post  </h1>
             <p>y este es el parrafo de inicio donde vamos
-                a explicar todo sobro todo </p>
+                a explicar todo sobre todo </p>
             
             <p>Este es un parrafo mas agregado en la rama master</p>
         </div>
