--- a/blogpost.html
+++ b/blogpost.html
@@ -19,6 +19,7 @@
                 e interesante del post  </h1>
             <p>y este es el parrafo de inicio donde vamos
                 a explicar todo sobre todo </p>
+	    <p><img src="imagenes/antena.png" width="100%" /></p>
             
             <p>Este es un parrafo mas agregado en la rama master</p>
         </div>
