cambio al tagline y color del footer :)

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
         <div id="cabecera">
             <img id="logo" src="imagenes/spacex.jpg" alt="">
             HYperblog 
-            <span id="tagline">Bienvenidos</span>
+            <span id="tagline">Bienvenidos a tu blog de confianza</span>
         </div>
         <div id="post">
             <h1> este es el título atractivo 
